update page compétences

--- a/templates/competences.html
+++ b/templates/competences.html
@@ -28,11 +28,23 @@
 
 
     </div>
+        <div style="width: 99vw;" class="flex mt-3 ml-2 justify-center">
+            <div class="input-group text-white " style="width: 20vw;">
+                <span class="input-group-text bg-white/40 backdrop-blur text-black border-hidden" style="font-family: 'titre', sans-serif !important">Catégories</span>
+                <select name="" id="Catégories" class="form-select bg-white/40 backdrop-blur text-black border-hidden" style="font-family: 'titre', sans-serif !important">
+                    <option value="" class="bg-white backdrop-blur"></option>
+                    <option value="front-end" class="bg-light-blue backdrop-blur" style="font-family: 'titre', sans-serif !important">Front-end</option>
+                    <option value="back-end" class="bg-light-green backdrop-blur" style="font-family: 'titre', sans-serif !important">Back-end</option>
+                    <option value="databases" class="bg-light-pink backdrop-blur" style="font-family: 'titre', sans-serif !important">Databases</option>
+                </select>
+                
+            </div>
 
-        <div style="width: 99vw; height: 85vh; overflow:scroll;" class="flex justify-center mt-4 fade-in">
+        </div>
+        <div style="width: 99vw; height: 79vh; overflow:scroll;" class="flex justify-center mt-4 fade-in">
 
             <div class="grid grid-cols-3 gap-24 mb-5">
-                <div class=" rounded p-5 fade-in" style="width: 20vw;">
+                <div id="HTML" class=" rounded p-5 fade-in" style="width: 20vw;">
                     <div class="flex justify-center">
                         <img src="../static/media/html.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
@@ -46,7 +58,7 @@
                         <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
                     </div>
                 </div>
-                <div class=" rounded p-5 fade-in" style="width: 20vw;">
+                <div  id="CSS" class=" rounded p-5 fade-in" style="width: 20vw;">
                     <div class="flex justify-center">
                         <img src="../static/media/csspng.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
@@ -60,7 +72,7 @@
                     </div>
 
                 </div>
-                <div class=" rounded p-5 fade-in" style="width: 20vw;">
+                <div  id="JS" class=" rounded p-5 fade-in" style="width: 20vw;">
                     <div class="flex justify-center">
                         <img src="../static/media/js.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
@@ -74,7 +86,7 @@
                     </div>
 
                 </div>
-                <div class=" rounded p-5 fade-in" style="width: 20vw;">
+                <div  id="PHP" class=" rounded p-5 fade-in" style="width: 20vw;">
                     <div class="flex justify-center">
                         <img src="../static/media/PHP.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
@@ -88,7 +100,7 @@
                     </div>
 
                 </div>
-                <div class=" rounded p-5 fade-in" style="width: 20vw;">
+                <div  id="c-sharp" class=" rounded p-5 fade-in" style="width: 20vw;">
                     <div class="flex justify-center">
                         <img src="../static/media/csharp.svg.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
@@ -102,7 +114,7 @@
                     </div>
 
                 </div>
-                <div class=" rounded p-5 fade-in" style="width: 20vw;">
+                <div  id="Mysql" class=" rounded p-5 fade-in" style="width: 20vw;">
                     <div class="flex justify-center">
                         <img src="../static/media/mysql.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
@@ -116,7 +128,35 @@
                     </div>
 
                 </div>
-                <div class=" rounded p-5 fade-in" style="width: 20vw;">
+                <div  id="postgres" class=" rounded p-5 fade-in" style="width: 20vw;">
+                    <div class="flex justify-center">
+                        <img src="../static/media/postgres.png" alt="" class="" style="width: 10vw; height: 20vh;">
+
+                    </div>
+                    <div class="flex justify-center">
+
+                        <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">PostgresSQL</h1>
+                    </div>
+                    <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
+                        <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
+                    </div>
+
+                </div>
+                <div  id="sqlserver" class=" rounded p-5 fade-in" style="width: 20vw;">
+                    <div class="flex justify-center">
+                        <img src="../static/media/sqlserver.png" alt="" class="" style="width: 10vw; height: 20vh;">
+
+                    </div>
+                    <div class="flex justify-center">
+
+                        <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">SQL Server</h1>
+                    </div>
+                    <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
+                        <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
+                    </div>
+
+                </div>
+                <div  id="Python" class=" rounded p-5 fade-in" style="width: 20vw;">
                     <div class="flex justify-center">
                         <img src="../static/media/python.png" alt="" style="width: 10vw; height: 20vh;">
 
@@ -130,7 +170,7 @@
                     </div>
 
                 </div>
-                <div class=" rounded p-5 fade-in" style="width: 20vw;">
+                <div  id="bootstrap" class=" rounded p-5 fade-in" style="width: 20vw;">
                     <div class="flex justify-center">
                         <img src="../static/media/Bootstrap.png" alt="" class="" style="width: 10vw; height:20vh;">
 
@@ -144,7 +184,7 @@
                     </div>
 
                 </div>
-                <div class=" rounded p-5 fade-in" style="width: 20vw;">
+                <div  id="Tailwind" class=" rounded p-5 fade-in" style="width: 20vw;">
                     <div class="flex justify-center">
                         <img src="../static/media/Tailwindcss.svg.png" alt="" class="" style="width: 10vw; height: 20vh;">
 
@@ -179,7 +219,7 @@
         class="fade-in fixed mb-3 let-0 ml-2 bottom-0 btn rounded-xl  bg-neutral-700 text-xl text-white hover:bg-neutral-800"><i
             class="bi bi-github"></i></a>
     <div id=""
-        class="fade-in Bienvenue fixed mb-3 right-0 ml-2 bottom-0 btn rounded-xl text-xl  blur-sm text-white  btn  h-10 ml-2 mt-1  hover:blur-none ">
+        class="fade-in Bienvenue fixed mb-1 right-0 ml-2 bottom-0 btn rounded-xl text-xl  blur-sm text-white  btn  h-10 ml-2 mt-1  hover:blur-none ">
         <span style="font-family: 'titre', sans-serif !important">Dev by Adil Khadich</span>
 
     </div>
@@ -200,6 +240,167 @@
     <script src="https://cdn.jsdelivr.net/npm/@vitalets/google-translate-api"></script>
 
     <script>
+        $('#Catégories').change(()=>
+        {
+            if($('#Catégories').val() == 'front-end')
+            {
+
+
+
+                $('#PHP').addClass('hidden')
+                $('#Mysql').addClass('hidden')
+                $('#Python').addClass('hidden')
+                $('#c-sharp').addClass('hidden')
+                $('#PHP').addClass('hidden')
+                $('#HTML').addClass('hidden')
+                $('#CSS').addClass('hidden')
+                $('#bootstrap').addClass('hidden')
+                $('#Tailwind').addClass('hidden')
+                $('#postgres').addClass('hidden')
+                $('#sqlserver').addClass('hidden')
+
+
+                $('#PHP').removeClass('fade-in')
+                $('#Mysql').removeClass('fade-in')
+                $('#Python').removeClass('fade-in')
+                $('#c-sharp').removeClass('fade-in')
+                $('#PHP').removeClass('fade-in')
+                $('#HTML').removeClass('fade-in')
+                $('#CSS').removeClass('fade-in')
+                $('#bootstrap').removeClass('fade-in')
+                $('#Tailwind').removeClass('fade-in')
+
+
+
+                $('#HTML').removeClass('hidden')
+                $('#CSS').removeClass('hidden')
+                $('#bootstrap').removeClass('hidden')
+                $('#Tailwind').removeClass('hidden')
+
+                $('#HTML').addClass('fade-in')
+                $('#CSS').addClass('fade-in')
+                $('#bootstrap').addClass('fade-in')
+                $('#Tailwind').addClass('fade-in')
+
+            }
+            if($('#Catégories').val() == 'back-end')
+            {
+                $('#PHP').addClass('hidden')
+                $('#Mysql').addClass('hidden')
+                $('#Python').addClass('hidden')
+                $('#c-sharp').addClass('hidden')
+                $('#PHP').addClass('hidden')
+                $('#HTML').addClass('hidden')
+                $('#CSS').addClass('hidden')
+                $('#bootstrap').addClass('hidden')
+                $('#Tailwind').addClass('hidden')
+
+                $('#PHP').removeClass('fade-in')
+                $('#Mysql').removeClass('fade-in')
+                $('#Python').removeClass('fade-in')
+                $('#c-sharp').removeClass('fade-in')
+                $('#PHP').removeClass('fade-in')
+                $('#HTML').removeClass('fade-in')
+                $('#CSS').removeClass('fade-in')
+                $('#bootstrap').removeClass('fade-in')
+                $('#Tailwind').removeClass('fade-in')
+
+
+
+                $('#PHP').removeClass('hidden')
+                $('#Mysql').removeClass('hidden')
+                $('#Python').removeClass('hidden')
+                $('#c-sharp').removeClass('hidden')
+                $('#JS').removeClass('hidden')
+                $('#postgres').removeClass('hidden')
+                $('#sqlserver').removeClass('hidden')
+
+                $('#PHP').addClass('fade-in')
+                $('#Mysql').addClass('fade-in')
+                $('#Python').addClass('fade-in')
+                $('#c-sharp').addClass('fade-in')
+                $('#JS').addClass('fade-in')
+
+
+            }
+            if($('#Catégories').val() == 'databases')
+            {
+                $('#PHP').removeClass('fade-in')
+                $('#Mysql').removeClass('fade-in')
+                $('#Python').removeClass('fade-in')
+                $('#c-sharp').removeClass('fade-in')
+                $('#PHP').removeClass('fade-in')
+                $('#HTML').removeClass('fade-in')
+                $('#CSS').removeClass('fade-in')
+                $('#bootstrap').removeClass('fade-in')
+                $('#Tailwind').removeClass('fade-in')
+
+
+                $('#HTML').addClass('hidden')
+
+                $('#CSS').addClass('hidden')
+
+                $('#bootstrap').addClass('hidden')
+
+                
+                $('#Tailwind').addClass('hidden')
+
+                $('#Tailwind').addClass('hidden')
+                
+                
+                $('#PHP').addClass('hidden')
+
+
+                $('#JS').addClass('hidden')
+
+                $('#c-sharp').addClass('hidden')
+
+                $('#Python').addClass('hidden')
+                $('#postgres').removeClass('hidden')
+                $('#sqlserver').removeClass('hidden')
+
+
+                $('#Mysql').removeClass('hidden')
+                $('#Mysql').addClass('fade-in')
+
+
+
+            }
+            if($('#Catégories').val() == '')
+            {
+                $('#HTML').removeClass('hidden')
+                $('#CSS').removeClass('hidden')
+                $('#bootstrap').removeClass('hidden')
+                $('#Tailwind').removeClass('hidden')
+                $('#PHP').removeClass('hidden')
+                $('#JS').removeClass('hidden')
+                $('#c-sharp').removeClass('hidden')
+                $('#Python').removeClass('hidden')
+                $('#Mysql').removeClass('hidden')
+
+                $('#postgres').removeClass('hidden')
+                $('#sqlserver').removeClass('hidden')
+
+                $('#HTML').addClass('fade-in')
+                $('#CSS').addClass('fade-in')
+                $('#bootstrap').addClass('fade-in')
+                $('#Tailwind').addClass('fade-in')
+                $('#PHP').addClass('fade-in')
+                $('#JS').addClass('fade-in')
+                $('#c-sharp').addClass('fade-in')
+                $('#Python').addClass('fade-in')
+                $('#Mysql').addClass('fade-in')
+
+
+
+                
+
+
+
+
+            }
+
+        })
         $(document).ready(function () {
             $('#langSelect').change(function () { translate(); });
 
