ajout page parcours

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -28,6 +28,9 @@
     <a href="{{url_for('competence')}}"
       class="text-base font-bold leading-6 text-black Bienvenue{% if active_page == 'Competences' %}underline underline underline-offset-8{% endif %}"
       style="font-family: 'titre', sans-serif !important"><i class="fa-solid fa-briefcase"></i> Compétences</a>
+    <a href="{{url_for('parcours')}}"
+      class="text-base font-bold leading-6 text-black Bienvenue{% if active_page == 'Parcours' %}underline underline underline-offset-8{% endif %}"
+      style="font-family: 'titre', sans-serif !important"><i class="fa-solid fa-graduation-cap"></i> Parcours</a>
     <a href="{{url_for('about')}}"
       class="text-base font-bold leading-6 text-black Bienvenue{% if active_page == 'About' %}underline underline underline-offset-8{% endif %}"
       style="font-family: 'titre', sans-serif !important"><i class="bi bi-person-square"></i> À propos</a>
