--- a/templates/competences.html
+++ b/templates/competences.html
@@ -19,7 +19,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@600&family=Roboto&family=Roboto+Condensed:wght@300&display=swap');
 </style>
 
-<body class=" bg-neutral-900 ">
+<body class="bg-blue-900">
     <div class="scrollbar" id="style-1">
         <div class="force-overflow"></div>
     </div>
@@ -55,7 +55,7 @@
 
                     </div>
                     <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                        <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
+                        <div class="bg-white/20 backdrop-blur-sm  h-3 rounded-full" style="width: 80%"></div>
                     </div>
                 </div>
                 <div  id="CSS" class=" rounded p-5 fade-in" style="width: 20vw;">
@@ -68,7 +68,7 @@
                         <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">CSS</h1>
                     </div>
                     <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                        <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
+                        <div class="bg-white/20 backdrop-blur-sm  h-3 rounded-full" style="width: 80%"></div>
                     </div>
 
                 </div>
@@ -82,7 +82,7 @@
                         <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">JavaScript</h1>
                     </div>
                     <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                        <div class="bg-blue-500 h-3 rounded-full" style="width: 70%"></div>
+                        <div class="bg-white/20 backdrop-blur-sm  h-3 rounded-full" style="width: 70%"></div>
                     </div>
 
                 </div>
@@ -96,7 +96,7 @@
                         <h1 class="text-white flex justify-center mt-4" style="width: 15vw;">PHP</h1>
                     </div>
                     <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                        <div class="bg-blue-500 h-3 rounded-full" style="width: 75%"></div>
+                        <div class="bg-white/20 backdrop-blur-sm  h-3 rounded-full" style="width: 75%"></div>
                     </div>
 
                 </div>
@@ -110,7 +110,7 @@
                         <h1 class="text-white flex justify-center mt-4" style="width: 15vw;">C-sharp</h1>
                     </div>
                     <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                        <div class="bg-blue-500 h-3 rounded-full" style="width: 62%"></div>
+                        <div class="bg-white/20 backdrop-blur-sm  h-3 rounded-full" style="width: 62%"></div>
                     </div>
 
                 </div>
@@ -124,7 +124,7 @@
                         <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">MySQL</h1>
                     </div>
                     <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                        <div class="bg-blue-500 h-3 rounded-full" style="width: 70%"></div>
+                        <div class="bg-white/20 backdrop-blur-sm  h-3 rounded-full" style="width: 70%"></div>
                     </div>
 
                 </div>
@@ -138,7 +138,7 @@
                         <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">PostgresSQL</h1>
                     </div>
                     <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                        <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
+                        <div class="bg-white/20 backdrop-blur-sm  h-3 rounded-full" style="width: 80%"></div>
                     </div>
 
                 </div>
@@ -152,7 +152,7 @@
                         <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">SQL Server</h1>
                     </div>
                     <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                        <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
+                        <div class="bg-white/20 backdrop-blur-sm  h-3 rounded-full" style="width: 80%"></div>
                     </div>
 
                 </div>
@@ -166,7 +166,7 @@
                         <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">Python</h1>
                     </div>
                     <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                        <div class="bg-blue-500 h-3 rounded-full" style="width: 60%"></div>
+                        <div class="bg-white/20 backdrop-blur-sm  h-3 rounded-full" style="width: 60%"></div>
                     </div>
 
                 </div>
@@ -180,7 +180,7 @@
                         <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">Bootstrap</h1>
                     </div>
                     <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                        <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
+                        <div class="bg-white/20 backdrop-blur-sm  h-3 rounded-full" style="width: 80%"></div>
                     </div>
 
                 </div>
@@ -194,7 +194,7 @@
                         <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">Tailwind CSS</h1>
                     </div>
                     <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                        <div class="bg-blue-500 h-3 rounded-full" style="width: 80%"></div>
+                        <div class="bg-white/20 backdrop-blur-sm  h-3 rounded-full" style="width: 80%"></div>
                     </div>
 
                 </div>
