--- a/templates/projet.html
+++ b/templates/projet.html
@@ -19,7 +19,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@600&family=Roboto&family=Roboto+Condensed:wght@300&display=swap');
 </style>
 
-<body class="bg-neutral-900 ">
+<body class="bg-blue-900 ">
     <div class="scrollbar" id="style-1">
         <div class="force-overflow"></div>
     </div>
