--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,7 +10,7 @@
     font-family: 'titre', sans-serif
   }
 </style>
-<nav class="flex items-center bg-white backdrop-blur-sm pr-0 justify-between p-6 lg:px-8 sticky top-0 z-40" aria-label="Global"
+<nav class="flex items-center bg-white pr-0 justify-between p-6 lg:px-8 sticky top-0 z-40" aria-label="Global"
   style="height: 7vh;">
   <div class="flex lg:flex-1">
     <a href="{{url_for('home')}}" class="-m-1.5 p-1.5 text-2xl rounded-full p-2  text-black  " id="singature">
@@ -45,7 +45,7 @@
 
   <div>
 
-    <select class="form-select w-28" name="" id="langSelect" style="font-family: 'titre', sans-serif !important">
+    <select class="form-select w-28 bg-white/30 backdrop-blur-sm border-hidden " name="" id="langSelect" style="font-family: 'titre', sans-serif !important">
       <option value="fr">French</option>
       <option value="en">English</option>
       <!-- Ajoutez autant d'options que nécessaire -->
