--- a/templates/About.html
+++ b/templates/About.html
@@ -35,7 +35,7 @@
 
     </div>
     <div style="width: 90vw;height: 20vh; " class="mt-5 fade-in">
-        <h2 class="text-neutral-400 text-4xl ml-28 fade-in  ">Qui suis-je ?</h2>
+        <h2 class="text-gray-400 text-4xl ml-28 fade-in  ">Qui suis-je ?</h2>
         <p class="ml-28  mt-2 text-white  text-xl fade-in">
             Je suis Adil Khadich, un étudiant passionné de 20 ans spécialisé dans le développement web.
             Originaire du monde du code, j'ai découvert ma passion pour la création de solutions numériques dès mon plus
@@ -117,12 +117,12 @@
 
     </div>
     <a href="{{ url_for('download_pdf') }}"
-        class="Bienvenue fade-in fixed mb-3  let-0 ml-2 w-12 hover:w-20 bottom-12 btn rounded-xl text-xl  bg-neutral-700 text-white hover:bg-neutral-800 btn   h-10 ml-2 mt-1"
-        download style=" overflow: hidden;">
+        class="Bienvenue fade-in fixed mb-3  let-0 ml-2 w-12 hover:w-20 bottom-12 btn rounded-xl text-xl   bg-gray-950 text-white hover:bg-gray-900 btn   h-10 ml-2 mt-1"
+        download style=" overflow: hidden;" target="_blank">
         <i class="bi bi-file-earmark-text"></i> <span style="font-family: 'titre', sans-serif !important">CV</span>
     </a>
     <a href="https://github.com/Adkhey74" target="_blank"
-        class="fade-in fixed mb-3 let-0 ml-2 bottom-0 btn rounded-xl  bg-neutral-700 text-xl text-white hover:bg-neutral-800"><i
+        class="fade-in fixed mb-3 let-0 ml-2 bottom-0 btn rounded-xl  bg-gray-950 text-xl text-white hover:bg-gray-900"><i
             class="bi bi-github"></i></a>
     <div id=""
         class="fade-in fixed mb-3 right-0 ml-2 bottom-0 btn rounded-xl text-xl  blur-sm text-white  btn  h-10 ml-2 mt-1  hover:blur-none ">
