--- a/templates/About.html
+++ b/templates/About.html
@@ -35,7 +35,7 @@
 
     </div>
     <div style="width: 90vw;height: 20vh; " class="mt-5 fade-in">
-        <h2 class="text-gray-400 text-4xl ml-28 fade-in  ">Qui suis-je ?</h2>
+        <h2 class="text-rose-500 text-4xl ml-28 fade-in  ">Qui suis-je ?</h2>
         <p class="ml-28  mt-2 text-white  text-xl fade-in">
             Je suis Adil Khadich, un étudiant passionné de 20 ans spécialisé dans le développement web.
             Originaire du monde du code, j'ai découvert ma passion pour la création de solutions numériques dès mon plus
@@ -70,8 +70,8 @@
 
     </div> -->
     <div style="height: fit-content; width: fit-content;" class="mt-5 fade-in">
-        <h2 class="text-neutral-400 text-4xl ml-28  mb-2 fade-in ">Mes passions</h2>
-        <h2 class="text-neutral-500 text-2xl ml-28  fade-in ">L'E-sport</h2>
+        <h2 class="text-rose-500 text-4xl ml-28  mb-2 fade-in ">Mes passions</h2>
+        <h2 class="text-rose-700 text-2xl ml-28  fade-in ">L'E-sport</h2>
         <p class="ml-28  mt-2 text-white mr-5 text-xl fade-in">
             Je suis un grand fan de l'e-sport, et je prends beaucoup de plaisir à soutenir mes équipes préférées.
             J'apprécie particulièrement l'intensité des compétitions et le talent des joueurs. Mon intérêt pour
@@ -91,7 +91,7 @@
             </div>
 
         </div>
-        <h2 class="text-neutral-500 text-2xl ml-28  fade-in ">Le football</h2>
+        <h2 class="text-rose-700 text-2xl ml-28  fade-in ">Le football</h2>
         <p class="ml-28  mt-2 text-white  mr-5 text-xl fade-in">
             Le football a vraiment marqué une décennie de ma vie, particulièrement au sein de clubs locaux comme Seynod,
             Annecy-le-Vieux et Vieugy. Bien sûr, ce ne sont pas les clubs les plus renommés, mais chaque expérience a
