--- a/templates/competences.html
+++ b/templates/competences.html
@@ -54,8 +54,8 @@
                         <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">HTML</h1>
 
                     </div>
-                    <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                        <div class="bg-white/20 backdrop-blur-sm  h-3 rounded-full" style="width: 80%"></div>
+                    <div class="w-full bg-rose-950 rounded-full mt-4 h-3 ">
+                        <div class="bg-rose-500  h-3 rounded-full" style="width: 80%"></div>
                     </div>
                 </div>
                 <div  id="CSS" class=" rounded p-5 fade-in" style="width: 20vw;">
@@ -67,8 +67,8 @@
 
                         <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">CSS</h1>
                     </div>
-                    <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                        <div class="bg-white/20 backdrop-blur-sm  h-3 rounded-full" style="width: 80%"></div>
+                    <div class="w-full bg-rose-950 rounded-full mt-4 h-3 ">
+                        <div class="bg-rose-500  h-3 rounded-full" style="width: 80%"></div>
                     </div>
 
                 </div>
@@ -81,8 +81,8 @@
 
                         <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">JavaScript</h1>
                     </div>
-                    <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                        <div class="bg-white/20 backdrop-blur-sm  h-3 rounded-full" style="width: 70%"></div>
+                    <div class="w-full bg-rose-950 rounded-full mt-4 h-3 ">
+                        <div class="bg-rose-500  h-3 rounded-full" style="width: 70%"></div>
                     </div>
 
                 </div>
@@ -95,8 +95,8 @@
 
                         <h1 class="text-white flex justify-center mt-4" style="width: 15vw;">PHP</h1>
                     </div>
-                    <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                        <div class="bg-white/20 backdrop-blur-sm  h-3 rounded-full" style="width: 75%"></div>
+                    <div class="w-full bg-rose-950 rounded-full mt-4 h-3 ">
+                        <div class="bg-rose-500  h-3 rounded-full" style="width: 75%"></div>
                     </div>
 
                 </div>
@@ -109,8 +109,8 @@
 
                         <h1 class="text-white flex justify-center mt-4" style="width: 15vw;">C-sharp</h1>
                     </div>
-                    <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                        <div class="bg-white/20 backdrop-blur-sm  h-3 rounded-full" style="width: 62%"></div>
+                    <div class="w-full bg-rose-950 rounded-full mt-4 h-3 ">
+                        <div class="bg-rose-500  h-3 rounded-full" style="width: 62%"></div>
                     </div>
 
                 </div>
@@ -123,8 +123,8 @@
 
                         <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">MySQL</h1>
                     </div>
-                    <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                        <div class="bg-white/20 backdrop-blur-sm  h-3 rounded-full" style="width: 70%"></div>
+                    <div class="w-full bg-rose-950 rounded-full mt-4 h-3 ">
+                        <div class="bg-rose-500  h-3 rounded-full" style="width: 70%"></div>
                     </div>
 
                 </div>
@@ -137,8 +137,8 @@
 
                         <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">PostgresSQL</h1>
                     </div>
-                    <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                        <div class="bg-white/20 backdrop-blur-sm  h-3 rounded-full" style="width: 80%"></div>
+                    <div class="w-full bg-rose-950 rounded-full mt-4 h-3 ">
+                        <div class="bg-rose-500  h-3 rounded-full" style="width: 80%"></div>
                     </div>
 
                 </div>
@@ -151,8 +151,8 @@
 
                         <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">SQL Server</h1>
                     </div>
-                    <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                        <div class="bg-white/20 backdrop-blur-sm  h-3 rounded-full" style="width: 80%"></div>
+                    <div class="w-full bg-rose-950 rounded-full mt-4 h-3 ">
+                        <div class="bg-rose-500  h-3 rounded-full" style="width: 80%"></div>
                     </div>
 
                 </div>
@@ -165,8 +165,8 @@
 
                         <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">Python</h1>
                     </div>
-                    <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                        <div class="bg-white/20 backdrop-blur-sm  h-3 rounded-full" style="width: 60%"></div>
+                    <div class="w-full bg-rose-950 rounded-full mt-4 h-3 ">
+                        <div class="bg-rose-500  h-3 rounded-full" style="width: 60%"></div>
                     </div>
 
                 </div>
@@ -179,8 +179,8 @@
 
                         <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">Bootstrap</h1>
                     </div>
-                    <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                        <div class="bg-white/20 backdrop-blur-sm  h-3 rounded-full" style="width: 80%"></div>
+                    <div class="w-full bg-rose-950 rounded-full mt-4 h-3 ">
+                        <div class="bg-rose-500  h-3 rounded-full" style="width: 80%"></div>
                     </div>
 
                 </div>
@@ -193,8 +193,8 @@
 
                         <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">Tailwind CSS</h1>
                     </div>
-                    <div class="w-full bg-gray-200 rounded-full mt-4 h-3 dark:bg-gray-700">
-                        <div class="bg-white/20 backdrop-blur-sm  h-3 rounded-full" style="width: 80%"></div>
+                    <div class="w-full bg-rose-950 rounded-full mt-4 h-3 ">
+                        <div class="bg-rose-500  h-3 rounded-full" style="width: 80%"></div>
                     </div>
 
                 </div>
