--- a/templates/contact.html
+++ b/templates/contact.html
@@ -11,55 +11,55 @@
 
 
 </head>
+<body class="bg-blue-900">
 
-{% include 'body.html' %}
-{% include 'navbar.html' %}
-<div id="particles-js" style="height: 185vh;width: 100vw;z-index: -50; position: fixed; top: 0;">
-</div>
-<div class=" flex justify-center items-center fade-in " style="height: 100vh; top: 25%;">
+  {% include 'navbar.html' %}
+  <div id="particles-js" style="height: 185vh;width: 100vw;z-index: -50; position: fixed; top: 0;">
+  </div>
+  <div class=" flex justify-center items-center fade-in " style="height: 90vh; top: 25%;">
 
-  <div class="flex justify-center items-center space-x-24 " style="width: 100vw; height: fit-content;">
-    <div class="grid grid-rows-2 grid-flow-col gap-x-32">
-      <div class=" text-white flex justify-center" style="font-size: 200px;"><i class="bi bi-phone"></i></div>
+    <div class="flex justify-center items-center space-x-24 " style="width: 100vw; height: fit-content;">
+      <div class="grid grid-rows-2 grid-flow-col gap-x-32">
+        <div class=" text-white flex justify-center" style="font-size: 200px;"><i class="bi bi-phone"></i></div>
 
-      <a href="#" class="fade-in   text-xl   text-white hover:bg-neutral-800 btn  h-10 ">
-        07 82 92 38 06
-      </a>
-      <div class="  text-white flex justify-center" style="font-size: 200px;"><i class="bi bi-envelope"></i></div>
-      <a href="#" class="fade-in   text-xl   text-white hover:bg-neutral-800 btn  h-10 ">
-        adil.khadich@gmail.com
-      </a>
+        <a href="#" class="fade-in   text-xl   text-white hover:bg-neutral-800 btn  h-10 ">
+          07 82 92 38 06
+        </a>
+        <div class="  text-white flex justify-center" style="font-size: 200px;"><i class="bi bi-envelope"></i></div>
+        <a href="#" class="fade-in   text-xl   text-white hover:bg-neutral-800 btn  h-10 ">
+          adil.khadich@gmail.com
+        </a>
 
-      <div class="  text-white flex justify-center" style="font-size: 200px;"><i class="bi bi-linkedin"></i></div>
+        <div class="  text-white flex justify-center" style="font-size: 200px;"><i class="bi bi-linkedin"></i></div>
 
-      <a href="https://www.linkedin.com/in/adil-khadich-289691237/"
-        class="fade-in   text-xl   text-white hover:bg-neutral-800 btn  h-10 " target="_blank">
-        Linkedin
-      </a>
+        <a href="https://www.linkedin.com/in/adil-khadich-289691237/"
+          class="fade-in   text-xl   text-white hover:bg-neutral-800 btn  h-10 " target="_blank">
+          Linkedin
+        </a>
+      </div>
+
     </div>
+
+
+
+  </div>
+  </div>
+  <a href="{{ url_for('download_pdf') }}"
+    class="Bienvenue fade-in fixed mb-3  let-0 ml-2 w-12 hover:w-20 bottom-12 btn rounded-xl text-xl   bg-gray-950 text-white hover:bg-gray-900 btn   h-10 ml-2 mt-1"
+    download style=" overflow: hidden;" target="_blank">
+    <i class="bi bi-file-earmark-text"></i> <span style="font-family: 'titre', sans-serif !important">CV</span>
+  </a>
+  <a href="https://github.com/Adkhey74" target="_blank"
+    class="fade-in fixed mb-3 let-0 ml-2 bottom-0 btn rounded-xl  bg-gray-950 text-xl text-white hover:bg-gray-900"><i
+      class="bi bi-github"></i></a>
+  <div id=""
+    class="fade-in fixed mb-3 right-0 ml-2 bottom-0 btn rounded-xl text-xl  blur-sm text-white  btn  h-10 ml-2 mt-1  hover:blur-none ">
+    <h1 style="font-family: 'titre', sans-serif !important">Dev by Adil Khadich</h1>
 
   </div>
 
-
-
-</div>
-</div>
-<a href="{{ url_for('download_pdf') }}"
-  class="Bienvenue fade-in fixed mb-3  let-0 ml-2 w-12 hover:w-20 bottom-12 btn rounded-xl text-xl   bg-gray-950 text-white hover:bg-gray-900 btn   h-10 ml-2 mt-1"
-  download style=" overflow: hidden;" target="_blank">
-  <i class="bi bi-file-earmark-text"></i> <span style="font-family: 'titre', sans-serif !important">CV</span>
-</a>
-<a href="https://github.com/Adkhey74" target="_blank"
-  class="fade-in fixed mb-3 let-0 ml-2 bottom-0 btn rounded-xl  bg-gray-950 text-xl text-white hover:bg-gray-900"><i
-    class="bi bi-github"></i></a>
-<div id=""
-  class="fade-in fixed mb-3 right-0 ml-2 bottom-0 btn rounded-xl text-xl  blur-sm text-white  btn  h-10 ml-2 mt-1  hover:blur-none ">
-  <h1 style="font-family: 'titre', sans-serif !important">Dev by Adil Khadich</h1>
-
-</div>
-
-<script src="{{ url_for('static', filename='JS/particles.js') }}"></script>
-<script src="{{ url_for('static', filename='JS/app.js') }}"></script>
+  <script src="{{ url_for('static', filename='JS/particles.js') }}"></script>
+  <script src="{{ url_for('static', filename='JS/app.js') }}"></script>
 
 
 
