--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
       <div class="flex justify-end items-center" style="width: 50vw; height: 80vh;">
         <div class="Bienvenue text-6xl flex items-end text-white " style="height: 20vh; width: 30vw;"
           >
-          <p style="font-family: 'titre', sans-serif !important">Bienvenue, <br>je suis <span class="text-black" style="font-family: 'titre', sans-serif !important">Adil 
+          <p style="font-family: 'titre', sans-serif !important">Bienvenue, <br>je suis <span class="text-rose-500" style="font-family: 'titre', sans-serif !important">Adil 
           </span><br>développeur web
           </p>
         </div>
